resources/services/managed-connectors/stage/cos-fleet-manager.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: cos-fleet-manager
  name: cos-fleet-manager
spec:
  host: 3hax1xs5qgrci1r.api.stage.openshift.com
  to:
    kind: Service
    name: cos-fleet-manager-envoy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
